--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                 <h4>DROP A HELLO</h4>
             </div>
 
-            <div class="form-wrapper">    
-                <form action="https://formsubmit.co/eileenfsr@gmail.com" method="POST">
+            <div class="-wrapper">    
+                <form action="mailto:eileenfsr@gmail.com" method="POST">
                     <div class="form-item">
                         <label for="name" class="form-label">Name</label>
                         <input type="text" class="form-control" id="name" required placeholder="John Smith">
