--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv='cache-control' content='no-cache'> 
+	<meta http-equiv='expires' content='0'> 
+	<meta http-equiv='pragma' content='no-cache'>
         <title>Eileen Firdaos</title>
         <meta name="description" content="I'm Eileen. A frontend developer who's ever learning and curious. And loves cats.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
