--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <h4>DROP A HELLO</h4>
             </div>
 
-            <div class="-wrapper">    
+            <div class="form-wrapper">    
                 <form action="https://formsubmit.co/eileenfsr@gmail.com" method="POST">
                     <div class="form-item">
                         <label for="name" class="form-label">Name</label>
