--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
 
             <div class="form-wrapper">    
-                <form action="https://formsubmit.co/eileenfsr@gmail.com" method="POST">
+                <form action="https://formsubmit.co/e0c31a1abe3109bef84b31939e645568" method="POST">
                     <div class="form-item">
                         <label for="name" class="form-label">Name</label>
                         <input type="text" class="form-control" id="name" required placeholder="John Smith">
