--- a/index.html
+++ b/index.html
@@ -219,17 +219,17 @@
                 <form action="https://formsubmit.co/e0c31a1abe3109bef84b31939e645568" method="POST">
                     <div class="form-item">
                         <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" required placeholder="John Smith">
+                        <input type="text" class="form-control" name="name" id="fullname" required placeholder="John Smith">
                     </div>
                     
                     <div class="form-item">
                         <label for="mail" class="form-label">E-mail</label>
-                        <input type="text" class="form-control" id="mail" required placeholder="username@email.com">
+                        <input type="text" class="form-control" name="email" id="mail" required placeholder="username@email.com">
                     </div>
 
                     <div class="form-item">
                         <label for="message" class="form-label">Message</label>
-                        <textarea type="text" class="form-control" id="message" required placeholder="Hey there!"></textarea>
+                        <textarea type="text" class="form-control" name="messages" id="message" required placeholder="Hey there!"></textarea>
                     </div>
 
                     <div class="submit-button">
