--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <form action="https://formsubmit.co/e0c31a1abe3109bef84b31939e645568" method="POST">
                     <div class="form-item">
                         <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" name="name" id="fullname" required placeholder="John Smith">
+                        <input type="text" class="form-control" name="fullname" id="name" required placeholder="John Smith">
                     </div>
                     
                     <div class="form-item">
