--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
 
             <div class="form-wrapper">    
                 <form action="https://formsubmit.co/e0c31a1abe3109bef84b31939e645568" method="POST">
+			<!-- honeypot -->
+			<input type="text" name="_honey" style="display: none;">
                     <div class="form-item">
                         <label for="name" class="form-label">Name</label>
                         <input type="text" class="form-control" name="fullname" id="name" required placeholder="John Smith">
