--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
                 <form action="https://formsubmit.co/e0c31a1abe3109bef84b31939e645568" method="POST">
 			<!-- honeypot -->
 			<input type="text" name="_honey" style="display: none;">
+			<input type="hidden" name="_captcha" value="false">
                     <div class="form-item">
                         <label for="name" class="form-label">Name</label>
                         <input type="text" class="form-control" name="fullname" id="name" required placeholder="John Smith">
