--- a/index.html
+++ b/index.html
@@ -219,7 +219,11 @@
                 <form action="https://formsubmit.co/e0c31a1abe3109bef84b31939e645568" method="POST">
 			<!-- honeypot -->
 			<input type="text" name="_honey" style="display: none;">
+			<!-- disable captcha -->
 			<input type="hidden" name="_captcha" value="false">
+			<!-- thanks page -->
+			<input type="hidden" name="_next" value="eileenfirdaos.me/thanks.html">
+			
                     <div class="form-item">
                         <label for="name" class="form-label">Name</label>
                         <input type="text" class="form-control" name="fullname" id="name" required placeholder="John Smith">
@@ -239,9 +243,6 @@
                         <button type="submit" class="hover-target">Send</button>
                     </div>
                 </form>
-                <div id="thank-you-message" style="display: none;">
-                    <p>Thanks for dropping by!</p>
-                </div>
             </div>
         </section>
 
