--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     
                     <div class="form-item">
                         <label for="mail" class="form-label">E-mail</label>
-                        <input type="text" class="form-control" name="email" id="mail" required placeholder="username@email.com">
+                        <input type="email" class="form-control" name="email" id="mail" required placeholder="username@email.com">
                     </div>
 
                     <div class="form-item">
