--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 			<!-- disable captcha -->
 			<input type="hidden" name="_captcha" value="false">
 			<!-- thanks page -->
-			<input type="hidden" name="_next" value="eileenfirdaos.me/thanks.html">
+			<input type="hidden" name="_next" value="https://eileenfirdaos.me/thanks.html">
 			
                     <div class="form-item">
                         <label for="name" class="form-label">Name</label>
