--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
 
             <div class="form-wrapper">    
-                <form action="https://formsubmit.co/e0c31a1abe3109bef84b31939e645568" method="POST">
+                <form id="contactForm" action="https://formbold.com/s/67KgA" method="POST">
 			<!-- honeypot -->
 			<input type="text" name="_honey" style="display: none;">
 			<!-- disable captcha -->
